feat: Integrate Stripe payment processing and enhance booking functionality
- Added PaymentScreen for processing payments using Stripe.
- Implemented BookingModal for selecting check-in and check-out dates.
- Updated booking management to include new types for bookings with tenant and property details.
- Enhanced PropertyDetailsScreen to support booking confirmation and navigation to payment.
- Refactored booking utilities to streamline booking creation and status updates.
- Introduced Supabase function for creating payment intents with Stripe integration.
- Updated app.json to include necessary configurations for mixed localizations.

--- a/app.json
+++ b/app.json
@@ -12,6 +12,10 @@
       "supportsTablet": true,
       "config": {
         "usesNonExemptEncryption": false
+      },
+      "infoPlist": {
+        "CFBundleAllowMixedLocalizations": true,
+        "CFBundleLocalizations": ["en"]
       }
     },
     "android": {
