--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@sentry/react-native": "^7.8.0",
+    "@sentry/react-native": "~7.2.0",
     "@stripe/stripe-react-native": "0.50.3",
     "@supabase/supabase-js": "^2.87.1",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~54.0.29",
+    "expo": "~54.0.31",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-picker": "^17.0.10",
-    "expo-linking": "~8.0.10",
-    "expo-router": "~6.0.19",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.21",
     "expo-secure-store": "^15.0.8",
-    "expo-splash-screen": "~31.0.12",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
