--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -39,3 +39,25 @@ enabled = true
 verify_jwt = true
 import_map = "./functions/cancel-booking/deno.json"
 entrypoint = "./functions/cancel-booking/index.ts"
+
+[functions.decline-booking]
+enabled = true
+verify_jwt = true
+import_map = "./functions/decline-booking/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/decline-booking/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/decline-booking/*.html" ]
+
+[functions.confirm-booking-manual]
+enabled = true
+verify_jwt = true
+import_map = "./functions/confirm-booking-manual/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/confirm-booking-manual/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/confirm-booking-manual/*.html" ]
