--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -61,3 +61,14 @@ entrypoint = "./functions/confirm-booking-manual/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/confirm-booking-manual/*.html" ]
+
+[functions.send-message-email]
+enabled = true
+verify_jwt = true
+import_map = "./functions/send-message-email/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/send-message-email/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/send-message-email/*.html" ]
